# libcsics-hdl

./: .gitignore  filelist.f  gen_filelist.py  veridian.yml
rtl/cores/vivado/: axi4s_ethernet_framer.sv  axi4s_ethernet_framer.v
rtl/interfaces/: axi4l_if.sv  axi4s_if.sv
rtl/ip/: axi4l_one_shot_conf.sv  buf_to_axis.sv  ethernet_framer.sv  vector_to_axis.sv
rtl/modules/: axi4l_one_shot_conf.sv  ethernet_framer.sv  vector_to_axis.sv
testbenches/: CMakeLists.txt  sim_main.cpp
testbenches/sim/: Clock.hpp
testbenches/tbs/: vector_to_axis_tb.sv
verilog/rtl/interfaces/: axi4l_if.sv
vhdl/: vhdl_ls.toml
vhdl/rtl/io/: ethernet_framer.vhdl  vector_to_axis.vhdl
